--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,8 @@
 
 en:
   hello: "Hello world"
+  views:
+    pagination:
+      previous: "&lt; Previous"
+      next: "&gt; Next"
+      truncate: "..."
